More comment section tweaks for niceness and to prevent unexpected horirizontal scroll on mobile

--- a/_sass/_comments.scss
+++ b/_sass/_comments.scss
@@ -116,16 +116,16 @@ div.g-recaptcha {
 @include media-query($on-palm) {
   input#comment-form-name,
   input#comment-form-email {
-    width: 19em;
+    width: 16em;
   }
 
   textarea#comment-form-message {
-    width: 21em;
+    width: 20em;
     height: 5em;
   }
 
   #commentpreview {
-    width: 17em;
+    width: 16em;
   }
 
   img.gravatar {
